# project_INDRA

./: .env.example  .gitignore  Dockerfile  LICENSE  agent.py  app.py  checkpoints.db-shm  docker-compose.yml  google_auth_helper.py  graph.py  memory.py  memory_architecture.md  onboarding.py  pyproject.toml  readme.md  telegram.py  test_script.py  web_chat.py
config/: mcp_config.json  settings.py
core/: channel_manager.py  cron_manager.py  cron_types.py  lane_manager.py  messaging.py  worker.py
interfaces/: base.py  telegram.py  web_chat.py
mcp_servers/: __init__.py  background_tools.py  cron_tools.py  exec_tools.py  google_workspace.py  web_tools.py
nodes/: agent.py  approval.py  graph.py  router.py  subagents.py  synthesizer.py  tools.py
scripts/: onboarding.py
skills/: HEARTBEAT.md  code_assistant.md  cron.md  data_analyst.md  general_chat.md  google_workspace.md  onboarding.md  web_tools.md
skills/heartbeat/: skill.md
skills/identity/: skill.md
skills/onboarding/: skill.md
skills/web_tools/: skill.md
tests/: test_graph.py  test_memory.py  test_memory_retrieval.py
