[project]
name = "personal-assistant"
version = "0.1.0"
description = "Production-grade agentic personal assistant via Telegram"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    # Agentic orchestration
    "langgraph>=0.3.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    # LLM agent framework
    "pydantic-ai[google]>=0.1.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # MCP integration
    "fastmcp>=2.0.0",
    # Google APIs (for workspace MCP server)
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
    "numpy>=1.26.0",
    # Environment
    "python-dotenv>=1.0.0",
    # Observability
    "logfire>=2.0.0",
    "zvec>=0.2.0",
    "fastembed>=0.7.4",
    "langchain-text-splitters>=1.1.1",
    "beautifulsoup4>=4.12.0",
    "ddgs>=9.10.0",
    "croniter>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
